@@ -1,3 +1,8 @@
+Dommerplan 1.3.8 - Martin Juhl - mj@casalogic.dk
+
+  * Tilføjet muligheder for søsterklubber..
+  * Oprydning i konfiguration..
+
 Dommerplan 1.3.7 - Martin Juhl - mj@casalogic.dk
 
   * Fixet Debug mode for synkronizeringen...
